# ghostdeck

./: .gitignore  Dockerfile.build  LICENSE  README.md
.github/workflows/: release.yml
docs/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: remote-mind.json
src-tauri/icons/: icon.icns
src-tauri/macos/: Info.plist
src-tauri/src/: main.rs
