[package]
name = "ghostdeck"
version = "0.1.0"
description = "GhostDeck — the dashboard for the GaiaWM ghosts you own"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }

[profile.release]
strip = true
lto = true
