[package]
name = "ghostdeck"
version = "0.2.0"
description = "GhostDeck — the dashboard for the GaiaWM ghosts you own"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-http = "2"

[profile.release]
strip = true
lto = true
